--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,165 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap');
+
+*{
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  position: relative;
+  height: 450px;
+  margin-top: 80px;
+}
+
+.userform {
+  width: 400px;
+  background-color: white;
+  padding: 0.5rem;
+  max-width: 500px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  /* margin-bottom: 0.5rem; */
+  gap: 0.25em;
+}
+
+.form-group:last-child {
+  margin: 0;
+}
+
+.form-group > label {
+  font-weight: bold;
+  font-size: 0.8em;
+  color: #333;
+}
+
+.form-group > input {
+  border: 1px solid #333;
+  border-radius: 0.25em;
+  font-size: 1rem;
+  padding: 0.25em;
+}
+
+.step-title {
+  margin: 0;
+  margin-bottom: 1rem;
+  text-align: center;
+  font-size: 14px;
+}
+
+.form-label {
+  margin-bottom: 0.5rem;
+}
+
+input {
+  padding: 5px 10px;
+  border-radius: 5px;
+  height: 35px;
+  display: block;
+  margin-bottom: 1rem;
+  border: 1px solid #eee;
+}
+
+.input-group {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.input-group > .input-group-text {
+  border: 1px solid #eee;
+  background: #eee;
+  width: 25%;
+  height: 25px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  padding: 10px 10px;
+}
+
+.input-group > input {
+  width: 64%;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.button-area {
+  display: flex;
+  align-content: space-between;
+}
+
+button {
+  background-color: #0066b2;
+  border: none;
   color: white;
+  padding: 0.8rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  width: 100%;
+  font-size: 12px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.button__group {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:first-of-type {
+  margin-right: 2em;
+}
+button {
+  flex: 1;
+}
+
+.card__info {
+  display: flex;
+  width: 400px;
+  height: 125px;
+}
+
+.card__info > .card__details {
+  border: 1px solid #eee;
+  border-radius: 5px;
+  margin-right: 30px;
+}
+
+.card__info > .card__details:hover {
+  border: 1px solid #0066b2;
+}
+
+.card__info > .card__details__1 {
+  border: 1px solid #eee;
+  border-radius: 5px;
+}
+
+.card__info > .card__details__1:hover {
+  border: 1px solid #0066b2;
+}
+
+.card-title.h5 {
+  font-weight: 700;
+  padding-top: 10px;
+}
+
+.card-body {
+  padding: 0 25px;
+}
+
+p.card-text {
+  font-size: 14px;
+}
+
+.success__title {
+  text-align: center;
 }
